Classification example trained

--- a/computer_vision/image_classifier/classification.ipynb
+++ b/computer_vision/image_classifier/classification.ipynb
@@ -2,19 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-12 21:59:11.009694: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-11-12 21:59:11.067417: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2023-11-12 21:59:11.067468: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2023-11-12 21:59:11.067523: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-11-12 21:59:11.077768: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-11-12 21:59:11.078597: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-11-12 21:59:12.939071: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "/home/dimitris/.pyenv/versions/3.10.13/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# Imports\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
     "import tensorflow as tf\n",
     "import tensorflow_datasets as tfds\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
     "import math\n",
+    "import helper\n",
     "\n",
     "# Global variables\n",
+    "'''Load model configs'''\n",
+    "model_config = helper.load_config(\"cifar_10\")\n",
     "\n",
     "'''Create a random seed generator for randomized TF ops'''\n",
     "rng = tf.random.Generator.from_seed(123, alg='philox')"
@@ -22,9 +44,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CIFAR-10 dataset information:\n",
+      "Number of classes: 10\n",
+      "Class names: ['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']\n",
+      "Number of training examples: 50000\n",
+      "Dataset splits: ['train', 'test']\n",
+      "Dataset description: The CIFAR-10 dataset consists of 60000 32x32 colour images in 10 classes, with 6000 images per class. There are 50000 training images and 10000 test images.\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the CIFAR-10 dataset\n",
     "(ds_train, ds_test), ds_info = tfds.load(\n",
@@ -33,12 +68,20 @@
     "    shuffle_files=True,\n",
     "    as_supervised=True,\n",
     "    with_info=True,\n",
-    ")"
+    ")\n",
+    "\n",
+    "# Access and print dataset information\n",
+    "print(\"CIFAR-10 dataset information:\")\n",
+    "print(f\"Number of classes: {ds_info.features['label'].num_classes}\")\n",
+    "print(f\"Class names: {ds_info.features['label'].names}\")\n",
+    "print(f\"Number of training examples: {ds_info.splits['train'].num_examples}\")\n",
+    "print(f\"Dataset splits: {list(ds_info.splits.keys())}\")\n",
+    "print(f\"Dataset description: {ds_info.description}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +118,7 @@
        ")"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,36 +133,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CIFAR-10 dataset information:\n",
-      "Number of classes: 10\n",
-      "Class names: ['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']\n",
-      "Number of training examples: 50000\n",
-      "Dataset description: The CIFAR-10 dataset consists of 60000 32x32 colour images in 10 classes, with 6000 images per class. There are 50000 training images and 10000 test images.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Access and print dataset information\n",
-    "print(\"CIFAR-10 dataset information:\")\n",
-    "print(f\"Number of classes: {ds_info.features['label'].num_classes}\")\n",
-    "print(f\"Class names: {ds_info.features['label'].names}\")\n",
-    "print(f\"Number of training examples: {ds_info.splits['train'].num_examples}\")\n",
-    "print(f\"Dataset description: {ds_info.description}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-09 23:36:32.631900: W tensorflow/core/kernels/data/cache_dataset_ops.cc:854] The calling iterator did not fully read the dataset being cached. In order to avoid unexpected truncation of the dataset, the partially cached contents of the dataset  will be discarded. This can happen if you have an input pipeline similar to `dataset.cache().take(k).repeat()`. You should use `dataset.take(k).cache().repeat()` instead.\n"
+      "2023-11-12 21:59:16.369934: W tensorflow/core/kernels/data/cache_dataset_ops.cc:854] The calling iterator did not fully read the dataset being cached. In order to avoid unexpected truncation of the dataset, the partially cached contents of the dataset  will be discarded. This can happen if you have an input pipeline similar to `dataset.cache().take(k).repeat()`. You should use `dataset.take(k).cache().repeat()` instead.\n"
      ]
     },
     {
@@ -181,22 +198,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set model config \n",
-    "cifar10_model_config = {\n",
-    "    'batch_size': 16,\n",
-    "    'training_epochs': 5\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of images in training set: 40000\n",
+      "Number of images in validation set: 10000\n",
+      "Number of images in test set: 10000\n"
+     ]
+    }
+   ],
    "source": [
     "# Pre-processing\n",
     "def normalize_image(image: tf.Tensor,label: tf.Tensor)-> (tf.Tensor, tf.Tensor):\n",
@@ -220,6 +234,7 @@
     "    image = tf.image.rot90(image, k=tf.cast(angle / 90, dtype=tf.int32))\n",
     "\n",
     "    image = tf.image.stateless_random_crop(value= image, size= (32,32,3), seed= new_seed)\n",
+    "\n",
     "    return image, label\n",
     "\n",
     "\n",
@@ -232,19 +247,145 @@
     "    image, label = augment_image((image, label), seed)\n",
     "    return image,label\n",
     "\n",
+    "# Generate the validation set from the training set\n",
+    "validation_size = int(model_config['val_size'] * ds_info.splits['train'].num_examples)  # You can adjust the validation split as needed\n",
+    "\n",
+    "# Create the validation dataset\n",
+    "ds_val = ds_train.take(validation_size)\n",
+    "ds_train = ds_train.skip(validation_size)\n",
+    "\n",
+    "# Print the number of examples in the training and validation sets\n",
+    "print(\"Number of images in training set:\", ds_info.splits['train'].num_examples - validation_size)\n",
+    "print(\"Number of images in validation set:\", validation_size)\n",
+    "print(\"Number of images in test set:\", ds_info.splits['test'].num_examples)\n",
+    "\n",
     "# Pipelining pre-processing, augmentations, batching and caching of the training dataset.\n",
     "''''Order of things: 1. Caching Dataset into memory\n",
     "                     2. Shuffling dataset to introduce randomness on each training epoch\n",
     "                     3. Apply augmentations to the shuffled dataset using parallel mapping\n",
     "                     4. Batch dataset and normalize the images using vectorized mapping \n",
     "                     5. Prefetch dataset for performance optimization'''\n",
-    "\n",
     "ds_train = ds_train.cache()\n",
     "ds_train = ds_train.shuffle(ds_info.splits['train'].num_examples)\n",
     "ds_train = ds_train.map(random_wrapper, \n",
     "                        num_parallel_calls=tf.data.AUTOTUNE)\n",
-    "ds_train = ds_train.batch(cifar10_model_config['batch_size']).map(normalize_image)\n",
-    "ds_train = ds_train.prefetch(tf.data.AUTOTUNE)\n"
+    "ds_train = ds_train.batch(model_config['batch_size']).map(normalize_image)\n",
+    "ds_train = ds_train.prefetch(tf.data.AUTOTUNE)\n",
+    "\n",
+    "# Prepare the validation set\n",
+    "ds_val = ds_val.cache()\n",
+    "ds_val = ds_val.batch(model_config['batch_size']).map(normalize_image)\n",
+    "ds_val = ds_val.prefetch(tf.data.AUTOTUNE)\n",
+    "\n",
+    "\n",
+    "# Prepare the test set \n",
+    "ds_test = ds_test.batch(model_config['batch_size']).map(normalize_image)\n",
+    "ds_test = ds_test.cache()\n",
+    "ds_test = ds_test.prefetch(tf.data.AUTOTUNE)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"cifar10_model_1.0\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d (Conv2D)             (None, 30, 30, 32)        896       \n",
+      "                                                                 \n",
+      " max_pooling2d (MaxPooling2  (None, 15, 15, 32)        0         \n",
+      " D)                                                              \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 13, 13, 64)        18496     \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPoolin  (None, 6, 6, 64)          0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (None, 4, 4, 128)         73856     \n",
+      "                                                                 \n",
+      " max_pooling2d_2 (MaxPoolin  (None, 2, 2, 128)         0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 512)               0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 256)               131328    \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 256)               0         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 10)                2570      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 227146 (887.29 KB)\n",
+      "Trainable params: 227146 (887.29 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a model using the Keras Sequential API\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "\n",
+    "# Define our model's architecture\n",
+    "model = Sequential([\n",
+    "    Conv2D(32, (3, 3), activation='relu', \n",
+    "           data_format= 'channels_last', \n",
+    "           input_shape=(32, 32, 3)),\n",
+    "    MaxPooling2D((2, 2)),\n",
+    "    Conv2D(64, (3, 3), activation='relu'),\n",
+    "    MaxPooling2D((2, 2)),\n",
+    "    Conv2D(128, (3, 3), activation='relu'),\n",
+    "    MaxPooling2D((2, 2)),\n",
+    "    Flatten(),\n",
+    "    Dense(256, activation='relu'),\n",
+    "    Dropout(0.5),\n",
+    "    Dense(model_config['n_classes'], activation = None)\n",
+    "], name='cifar10_model_1.0')\n",
+    "\n",
+    "# Compile and configure the model for training\n",
+    "if model_config['optimizer'].lower() == 'adam':\n",
+    "    optimizer = Adam(learning_rate=model_config['learning_rate'])\n",
+    "\n",
+    "model.compile(optimizer=optimizer, \n",
+    "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True), \n",
+    "              metrics=[tf.keras.metrics.SparseCategoricalAccuracy(name='Accuracy'),\n",
+    "                       tf.keras.metrics.SparseTopKCategoricalAccuracy(name= 'TopKAccuracy')],\n",
+    "              run_eagerly=True)\n",
+    "\n",
+    "# Get a detailed view of how the defined model looks\n",
+    "model.summary()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "313/313 [==============================] - 71s 202ms/step - loss: 1.7820 - Accuracy: 0.3320 - val_loss: 1.4514 - val_Accuracy: 0.4823\n",
+      "Epoch 2/5\n",
+      "313/313 [==============================] - 64s 200ms/step - loss: 1.3964 - Accuracy: 0.4953 - val_loss: 1.3066 - val_Accuracy: 0.5294\n",
+      "Epoch 3/5\n",
+      "313/313 [==============================] - ETA: 0s - loss: 1.2511 - Accuracy: 0.5581"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the model\n",
+    "model.fit(ds_train, epochs= int(model_config['training_epochs']), validation_data= ds_val)"
    ]
   },
   {
