--- a/computer_vision/object_detector/object_detection.ipynb
+++ b/computer_vision/object_detector/object_detection.ipynb
@@ -93,10 +93,7 @@
     "        num_parallel_calls=tf.data.AUTOTUNE,\n",
     "    )\n",
     "    \n",
-    "    # if split != 'test':\n",
-    "    #     ds = ds.shuffle(config['batch_size'] * 4, reshuffle_each_iteration=True)\n",
-    "    \n",
-    "    # Create ragged batches(with elems of different sizes)\n",
+    "    # Create ragged batches(with elems of different sizes) #TODO: Do we need this?\n",
     "    if split == 'test':\n",
     "        ds = ds.shuffle(32, reshuffle_each_iteration=True)\n",
     "        ds = ds.ragged_batch(8, drop_remainder=True)\n",
