Added PyCOCO metrics

--- a/computer_vision/object_detector/object_detection.ipynb
+++ b/computer_vision/object_detector/object_detection.ipynb
@@ -17,13 +17,14 @@
     "sys.path.append('../')\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
-    "from helper import set_model_config, plot_loss, plot_confusion_matrix\n",
-    "from helper import visualize_object_detection_samples, visualize_object_predictions\n",
+    "from helper import set_model_config, plot_loss\n",
+    "from helper import visualize_object_predictions, visualize_object_detection_samples\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "from tensorflow.keras.callbacks import ModelCheckpoint\n",
     "import tensorflow_datasets as tfds\n",
     "import matplotlib.pyplot as plt\n",
-    "import keras_cv"
+    "import keras_cv\n",
+    "from keras_cv import bounding_box"
    ]
   },
   {
@@ -73,15 +74,22 @@
     "        source=\"rel_yxyx\",\n",
     "        target=bounding_box_format,\n",
     "    )\n",
+    "    \n",
     "    bounding_boxes = {\n",
-    "        \"classes\": tf.cast(inputs[\"objects\"][\"label\"], dtype=tf.int32),\n",
-    "        \"boxes\": tf.cast(boxes, dtype=tf.int32),\n",
+    "        \"classes\": tf.cast(inputs[\"objects\"][\"label\"], dtype = tf.float32),\n",
+    "        \"boxes\": tf.cast(boxes, dtype=tf.int32)\n",
     "    }\n",
     "    return {\"images\": tf.cast(image, tf.float32), \"bounding_boxes\": bounding_boxes}\n",
     "\n",
     "# Unpack batch from dataset to tuple format function\n",
     "def unpack_batch_dicts(inputs):\n",
-    "    return inputs[\"images\"], inputs[\"bounding_boxes\"]\n",
+    "    # Define the operation to cast values to tf.int32\n",
+    "    def cast_to_int32(value):\n",
+    "        return tf.cast(value, dtype=tf.int32)\n",
+    "    \n",
+    "    correct_gt = {\"classes\":  tf.ragged.map_flat_values(cast_to_int32, inputs['bounding_boxes']['classes']),\n",
+    "                    \"boxes\":  inputs['bounding_boxes']['boxes']}\n",
+    "    return inputs[\"images\"], bounding_box.to_dense(correct_gt, max_boxes = 100)\n",
     "\n",
     "# Custom dataloader, compatible with Keras-CV, applies shuffling and batching\n",
     "def load_pascal_voc(split, dataset, bounding_box_format):\n",
@@ -95,7 +103,6 @@
     "    \n",
     "    # Create ragged batches(with elems of different sizes) #TODO: Do we need this?\n",
     "    if split == 'test':\n",
-    "        ds = ds.shuffle(32, reshuffle_each_iteration=True)\n",
     "        ds = ds.ragged_batch(8, drop_remainder=True)\n",
     "    else:\n",
     "        ds = ds.shuffle(config['batch_size'] * 4, reshuffle_each_iteration=True)\n",
@@ -131,21 +138,7 @@
     ")\n",
     "ds_test, _ = load_pascal_voc(\n",
     "    split=\"test\", dataset=\"voc/2007\", bounding_box_format=\"xywh\"\n",
-    ")\n",
-    "\n",
-    "# Apply augmentations and set prefetch option on training set\n",
-    "ds_train = ds_train.map(augmenter, num_parallel_calls=tf.data.AUTOTUNE)\n",
-    "ds_train = ds_train.map(unpack_batch_dicts, num_parallel_calls=tf.data.AUTOTUNE)\n",
-    "ds_train = ds_train.prefetch(tf.data.AUTOTUNE)\n",
-    "\n",
-    "# Pre-process validation and test set\n",
-    "ds_val = ds_val.map(inf_preprocess, num_parallel_calls=tf.data.AUTOTUNE)\n",
-    "ds_val = ds_val.map(unpack_batch_dicts, num_parallel_calls=tf.data.AUTOTUNE)\n",
-    "ds_val = ds_val.prefetch(tf.data.AUTOTUNE)\n",
-    "\n",
-    "ds_test = ds_test.map(inf_preprocess, num_parallel_calls=tf.data.AUTOTUNE)\n",
-    "ds_test = ds_test.shuffle(ds_info.splits['test'].num_examples)\n",
-    "ds_test = ds_test.prefetch(tf.data.AUTOTUNE)"
+    ")"
    ]
   },
   {
@@ -185,6 +178,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Apply augmentations and pre-processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply augmentations and set prefetch option on training set\n",
+    "ds_train = ds_train.map(augmenter, num_parallel_calls=tf.data.AUTOTUNE)\n",
+    "ds_train = ds_train.map(unpack_batch_dicts, num_parallel_calls=tf.data.AUTOTUNE)\n",
+    "ds_train = ds_train.prefetch(tf.data.AUTOTUNE)\n",
+    "\n",
+    "# Pre-process validation and test set\n",
+    "ds_val = ds_val.map(inf_preprocess, num_parallel_calls=tf.data.AUTOTUNE)\n",
+    "ds_val = ds_val.map(unpack_batch_dicts, num_parallel_calls=tf.data.AUTOTUNE)\n",
+    "ds_val = ds_val.prefetch(tf.data.AUTOTUNE)\n",
+    "\n",
+    "ds_test = ds_test.map(inf_preprocess, num_parallel_calls=tf.data.AUTOTUNE)\n",
+    "ds_test = ds_test.shuffle(ds_info.splits['test'].num_examples)\n",
+    "ds_test = ds_test.prefetch(tf.data.AUTOTUNE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Load a backbone architecture from Keras-CV and create our own YoloV8 model"
    ]
   },
@@ -206,11 +227,23 @@
    "outputs": [],
    "source": [
     "# Create our custom YOLO model from the smallest available backbone\n",
+    "\n",
+    "# Set the Non-Maximum Supression module for predictions decoding\n",
+    "# NOTE: Tune confidence threshold for predictions to pass NMS\n",
+    "# NOTE: Decrease the required threshold to make predictions get pruned out\n",
+    "prediction_decoder = keras_cv.layers.NonMaxSuppression(\n",
+    "    bounding_box_format=\"xywh\",\n",
+    "    from_logits=True,\n",
+    "    iou_threshold=0.3,\n",
+    "    confidence_threshold=0.7,\n",
+    ")\n",
+    "\n",
     "model = keras_cv.models.YOLOV8Detector(\n",
     "    num_classes=len(get_class_mapping(ds_info)),\n",
     "    bounding_box_format=\"xywh\",\n",
     "    backbone=backbone,\n",
-    "    fpn_depth = 1\n",
+    "    fpn_depth = 1,\n",
+    "    prediction_decoder = prediction_decoder\n",
     ")\n",
     "model.summary()"
    ]
@@ -228,14 +261,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compile and configure the model for training\n",
-    "\n",
     "# Set Early Stopping strategy after 5 epochs of no improvement in total loss for validation set\n",
     "early_stopping = EarlyStopping(monitor='val_loss', patience=5)\n",
     "\n",
     "# Always save the best model\n",
     "saving_cb = ModelCheckpoint(\n",
-    "    filepath='./trained_models/pascal_yolo_model/best_model.h5',\n",
+    "    filepath='../trained_models/pascal_yolo_model/best_weights.h5',\n",
     "    save_weights_only=True,\n",
     "    monitor='val_loss', \n",
     "    mode='min',  \n",
@@ -243,20 +274,29 @@
     "    verbose=1\n",
     ")\n",
     "\n",
+    "# Use the PyCOCO metrics callback to track the mAP across different box sizes for all classes\n",
+    "metrics_cb = keras_cv.callbacks.PyCOCOCallback(\n",
+    "    ds_val.take(20), bounding_box_format=\"xywh\"\n",
+    ")\n",
+    "\n",
     "# Compile and train\n",
     "model.compile(optimizer = tf.keras.optimizers.Adam(learning_rate= config['learning_rate'],\n",
     "                                         global_clipnorm= config['global_clipnorm']),\n",
     "              classification_loss= 'binary_crossentropy',\n",
     "              box_loss=\"ciou\")\n",
-    "history = model.fit(ds_train, validation_data= ds_val, epochs = config['training_epochs'], callbacks = [early_stopping, \n",
-    "                                                                                                        saving_cb])"
+    "history = model.fit(ds_val.take(5), validation_data= ds_val.take(5), epochs = 1, callbacks = [early_stopping, \n",
+    "                                                                                                      saving_cb, \n",
+    "                                                                                                      metrics_cb])\n",
+    "\n",
+    "# Save the model\n",
+    "model.save(\"../trained_models/pascal_yolo_model/saved_model\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plot losses and confusion matrix"
+    "# Plot losses"
    ]
   },
   {
@@ -290,15 +330,6 @@
     "\n",
     "with plt.style.context('dark_background'):\n",
     "    visualize_object_predictions(trained_model, dataset= ds_test, bounding_box_format='xywh', class_mapping= get_class_mapping(ds_info))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# FINAL TODO: Plot confusion matrix for test set"
    ]
   }
  ],
