Documentation and PrettyTable for classifier

--- a/computer_vision/image_classifier/classification.ipynb
+++ b/computer_vision/image_classifier/classification.ipynb
@@ -1,12 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports\n",
     "import sys\n",
     "sys.path.append('../')\n",
     "import tensorflow as tf\n",
@@ -22,6 +28,13 @@
     "\n",
     "'''Create a random seed generator for randomized TF ops'''\n",
     "rng = tf.random.Generator.from_seed(123, alg='philox')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load dataset and show information"
    ]
   },
   {
@@ -58,6 +71,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Iterate the dataset and visualize some samples"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -81,6 +101,13 @@
     "# Visualize a grid of samples from the training set\n",
     "with plt.style.context('dark_background'):\n",
     "    visualize_classification_image_samples(ds_train, 10, ds_info, g_shape=(2,5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Apply pre-processing and augmentations before training"
    ]
   },
   {
@@ -168,6 +195,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run benchmarks on the data pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -193,6 +227,13 @@
     "fast_benchmark(ds_val)\n",
     "print('Second run after caching validation dataset...')\n",
     "fast_benchmark(ds_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create a simple image classification model using the Sequential API from Keras"
    ]
   },
   {
@@ -228,8 +269,7 @@
     "# Compile and configure the model for training\n",
     "\n",
     "# NOTE: Feel free to replace this with your own optimizer\n",
-    "if model_config['optimizer'].lower() == 'adam':\n",
-    "    optimizer = Adam(learning_rate=model_config['learning_rate'])\n",
+    "optimizer = Adam(learning_rate=model_config['learning_rate'])\n",
     "\n",
     "# Set Early Stopping strategy after 5 epochs of no improvement for validation set\n",
     "callback = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=5)\n",
@@ -243,6 +283,13 @@
     "\n",
     "# Get a detailed view of how the defined model looks\n",
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train the model"
    ]
   },
   {
@@ -270,6 +317,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Log metrics and print confusion matrix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -280,20 +334,37 @@
     "   How reliable is our model? How do the test metrics compare with your training \n",
     "   or validation metrics ? \"\"\"\n",
     "\n",
+    "from prettytable import PrettyTable\n",
+    "\n",
+    "\n",
     "evaluation_result = model.evaluate(ds_test, verbose= 0)\n",
     "\n",
     "# Print and log the evaluation metrics\n",
     "test_metrics = evaluation_result[1:]\n",
     "\n",
-    "# Print metrics\n",
-    "print(\"--------Test Metrics--------\")\n",
-    "print('Accuracy:', test_metrics[0])\n",
-    "print('TopKAccuracy: ', test_metrics[1])\n",
+    "# Create a PrettyTable\n",
+    "table = PrettyTable()\n",
+    "table.field_names = [\"Metric\", \"Value\"]\n",
+    "\n",
+    "# Add rows\n",
+    "table.add_row([\"Accuracy\", f\"{test_metrics[0]:.4f}\"])\n",
+    "table.add_row([\"TopKAccuracy\", f\"{test_metrics[1]:.4f}\"])\n",
+    "\n",
+    "# Print the table\n",
+    "print(\"--------Test dataset metrics--------\")\n",
+    "print(table)\n",
     "print(\"----------------------------\")\n",
     "\n",
     "# Plot confusion matrix with default background\n",
     "with plt.style.context('default'):\n",
     "    plot_confusion_matrix(model, ds_test, ds_info.features['label'].names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load the trained model and visualize predictions"
    ]
   },
   {
