Updated README and collab segm notebook
Added Sagemaker training and introduction modules

This commit added the introduction to Computer Vision
module with basics about Conv nets, augmentations and
image data in general. Also, an example on how to train
a model with AWS and Sagemaker was added.

--- a/computer_vision/image_classifier/classification.ipynb
+++ b/computer_vision/image_classifier/classification.ipynb
@@ -170,20 +170,17 @@
     "                     4. Batch dataset and normalize the images using vectorized mapping \n",
     "                     5. Prefetch dataset for performance optimization'''\n",
     "\n",
-    "ds_train = ds_train.map(normalize_image, num_parallel_calls=tf.data.AUTOTUNE)\n",
     "ds_train = ds_train.cache()\n",
     "ds_train = ds_train.shuffle(ds_info.splits['train'].num_examples, reshuffle_each_iteration=True)\n",
     "ds_train = ds_train.map(random_wrapper, \n",
     "                        num_parallel_calls=tf.data.AUTOTUNE)\n",
-    "# ds_train = ds_train.batch(model_config['batch_size']).map(normalize_image)\n",
-    "ds_train = ds_train.batch(model_config['batch_size']).prefetch(tf.data.AUTOTUNE)\n",
+    "ds_train = ds_train.batch(model_config['batch_size']).map(normalize_image)\n",
+    "ds_train = ds_train.prefetch(tf.data.AUTOTUNE)\n",
     "\n",
     "# Prepare the validation set\n",
     "ds_val = ds_val.cache()\n",
     "ds_val = ds_val.shuffle(validation_size, reshuffle_each_iteration=True)\n",
     "ds_val = ds_val.batch(model_config['batch_size']).map(normalize_image)\n",
-    "# ds_val = ds_val.map(normalize_image, num_parallel_calls=tf.data.AUTOTUNE)\n",
-    "# ds_val = ds_val.batch(model_config['batch_size'])\n",
     "ds_val = ds_val.prefetch(tf.data.AUTOTUNE)\n",
     "\n",
     "\n",
