Updated README and collab segm notebook

--- a/computer_vision/semantic_segmentation/semantic_segmentation.ipynb
+++ b/computer_vision/semantic_segmentation/semantic_segmentation.ipynb
@@ -369,7 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"./trained_models/oxford_segmentation/oxford_unet\")"
+    "model.save(\"../trained_models/oxford_segmentation/oxford_unet\")"
    ]
   }
  ],
