Added Sagemaker training and introduction modules
This commit added the introduction to Computer Vision
module with basics about Conv nets, augmentations and
image data in general. Also, an example on how to train
a model with AWS and Sagemaker was added.

--- a/computer_vision/semantic_segmentation/semantic_segmentation.ipynb
+++ b/computer_vision/semantic_segmentation/semantic_segmentation.ipynb
@@ -250,7 +250,7 @@
     "from tensorflow.keras.applications import MobileNetV2\n",
     "\n",
     "# Unet with pre-trained encoder\n",
-    "def unet_model(img_size, num_classes):\n",
+    "def unet_model(img_size):\n",
     "    base_model = tf.keras.applications.MobileNetV2(input_shape=img_size, include_top=False)\n",
     "\n",
     "    names = ['block_1_expand_relu', 'block_3_expand_relu', 'block_6_expand_relu',\n",
@@ -293,7 +293,7 @@
     "\n",
     "    return model\n",
     "\n",
-    "model = unet_model((224, 224, 3), config['n_classes'])\n",
+    "model = unet_model((224, 224, 3))\n",
     "model.summary()"
    ]
   },
